--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,13 +16,13 @@ PullImages:
 #     -date 
 #    when: on_failure
     - make gman
-    - cp ./build/bin/gman /home/public/dailybuild/go-matrix/gman$tag
+    - cp ./build/bin/gman /home/public/dailybuild/go-matrix/gman-linux-amd64-$tag
     - make clean 
     - make gman-windows-amd64
-    - cp build/bin/gman-windows-4.0-amd64.exe /home/public/dailybuild/go-matrix/gman$tag-windows.exe
+    - cp build/bin/gman-windows-4.0-amd64.exe /home/public/dailybuild/go-matrix/gman-windows-amd64-$tag.exe
     - make clean
     - make gman-darwin-amd64
-    - cp ./build/bin/gman-darwin-10.6-amd64 /home/public/dailybuild/go-matrix/gman$tag-darwin
+    - cp ./build/bin/gman-darwin-10.6-amd64 /home/public/dailybuild/go-matrix/gman-darwin-amd64-$tag
 #    - ssh 192.168.3.99 "docker  build -t ptone.jp/wallet:v4 . ;docker push  ptone.jp/wallet"
 #    - make
 #    - cp ./build/bin/geth /home/public/geth_backup/2geth$tag
