--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,9 @@ PullImages:
 #     - id
 #     -date 
 #    when: on_failure
+    - cd /home/shang/ci/go-matrix
+    - git pull
+    - make clean
     - make gman
     - cp ./build/bin/gman /home/public/dailybuild/go-matrix/gman-linux-amd64-$tag
     - make clean 
