--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,20 +23,20 @@ PullImages:
     - mv ./build/bin/gman-darwin-10.6-amd64 /home/public/dailybuild/go-matrix/gman-darwin-amd64-$tag
   only:
     - master
-KK:
-  stage: KK
-  script:
-    - date
-    - cd /home/public/dailybuild/go-matrix/
-    - tar -zcvf  tom$tag.tar.gz `ls -t gman* |head -3` /home/yang/work/1229/deploy/templates/man.json /home/yang/work/1229/deploy/templates/MANGenesis.json
-    - mv tom$tag.tar.gz /home/public/matrix备案/
-  when: manual
-#    - ssh 192.168.3.99 "docker  build -t ptone.jp/wallet:v4 . ;docker push  ptone.jp/wallet"
-#    - make
-#    - cp ./build/bin/geth /home/public/geth_backup/2geth$tag
-#    - docker tag  "registry.gitlab.com/ptminddev/website/datadeck-site/master/datadeck-site-com" "registry.gitlab.com/ptminddev/website/datadeck-site/master/datadeck-site-com:${tag}"
-#    - docker push "registry.gitlab.com/ptminddev/website/datadeck-site/master/datadeck-site-com:${tag}"
-#    - rancher --url http://192.168.3.60:8080/v1/projects/1a79 --access-key '7F741675D3D094A6A7E8' --secret-key 'WTdi6FbCP7nrQqmb6SLxPGt88ajbm5ukfZM1Aznp5' export kubernetes-ingress-lbs && cd kubernetes-ingress-lbs
-#    - rancher-compose --url http://192.168.3.60:8080/v1/projects/1a79 --access-key '7F741675D3D094A6A7E8' --secret-key 'WTdi6FbCP7nrQqmb6SLxPGt88ajbm5ukfZM1Aznp' up -d -c --force-upgrade aaa
-  only:
-    - master
+# KK:
+#   stage: KK
+#   script:
+#     - date
+#     - cd /home/public/dailybuild/go-matrix/
+#     - tar -zcvf  tom$tag.tar.gz `ls -t gman* |head -3` /home/yang/work/1229/deploy/templates/man.json /home/yang/work/1229/deploy/templates/MANGenesis.json
+#     - mv tom$tag.tar.gz /home/public/matrix备案/
+#   when: manual
+# #    - ssh 192.168.3.99 "docker  build -t ptone.jp/wallet:v4 . ;docker push  ptone.jp/wallet"
+# #    - make
+# #    - cp ./build/bin/geth /home/public/geth_backup/2geth$tag
+# #    - docker tag  "registry.gitlab.com/ptminddev/website/datadeck-site/master/datadeck-site-com" "registry.gitlab.com/ptminddev/website/datadeck-site/master/datadeck-site-com:${tag}"
+# #    - docker push "registry.gitlab.com/ptminddev/website/datadeck-site/master/datadeck-site-com:${tag}"
+# #    - rancher --url http://192.168.3.60:8080/v1/projects/1a79 --access-key '7F741675D3D094A6A7E8' --secret-key 'WTdi6FbCP7nrQqmb6SLxPGt88ajbm5ukfZM1Aznp5' export kubernetes-ingress-lbs && cd kubernetes-ingress-lbs
+# #    - rancher-compose --url http://192.168.3.60:8080/v1/projects/1a79 --access-key '7F741675D3D094A6A7E8' --secret-key 'WTdi6FbCP7nrQqmb6SLxPGt88ajbm5ukfZM1Aznp' up -d -c --force-upgrade aaa
+#   only:
+#     - master
