--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ PullImages:
   script:
     - pwd
     - cd /home/shang/ci/go-matrix
+    - git checkout master
     - git pull
     - git checkout master
     - make clean
